[gd_scene load_steps=28 format=3 uid="uid://cnva1t7elyuce"]

[ext_resource type="Theme" uid="uid://jn71302gkvqy" path="res://hud_theme.tres" id="1_pil5s"]
[ext_resource type="Script" uid="uid://biwrxmh77pnjx" path="res://Model/hud.gd" id="2_ugs5p"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="3_o5r0d"]
[ext_resource type="Texture2D" uid="uid://b5htmoxepvs57" path="res://assets/bar/health_bar_empty.png" id="6_nmx3l"]
[ext_resource type="Texture2D" uid="uid://e14rlujxv2r6" path="res://assets/bar/filled_bar.png" id="7_s7bk8"]
[ext_resource type="Script" uid="uid://blpgf8txxyl8p" path="res://Model/crop_bar.gd" id="8_fj0si"]
[ext_resource type="Texture2D" uid="uid://c7orjokudtall" path="res://assets/bar/efficiency_bar_empty.png" id="9_1cvsb"]
[ext_resource type="Texture2D" uid="uid://dxoevfrf00nn6" path="res://assets/bar/happiness_bar_empty.png" id="10_0ig0g"]
[ext_resource type="Texture2D" uid="uid://b13byyd7hdnsp" path="res://assets/button/next_round_button/next_round.png" id="10_o4crf"]
[ext_resource type="Script" uid="uid://dfm8a1cu60p68" path="res://Model/button_action.gd" id="11_jtq4o"]
[ext_resource type="Texture2D" uid="uid://cr8hfxgtx8jql" path="res://assets/button/next_round_button/next_button_click.png" id="11_n3rgs"]
[ext_resource type="Texture2D" uid="uid://c0b0lb0bibu85" path="res://assets/button/next_round_button/next_button_hover.png" id="12_s65m4"]
[ext_resource type="Script" uid="uid://bqulw7dgngjad" path="res://Model/InventaireUI.gd" id="13_ew7f8"]
[ext_resource type="Texture2D" uid="uid://dkopor575i0su" path="res://assets/stats_button/stats_button.png" id="13_xp7qj"]
[ext_resource type="Texture2D" uid="uid://dulb3upxyaimg" path="res://assets/stats_button/stats_button_click.png" id="14_o4crf"]
[ext_resource type="PackedScene" uid="uid://r1h4u5yp1lk2" path="res://View/chart_stats.tscn" id="14_o7jfm"]
[ext_resource type="Script" uid="uid://0h5bj5sdmbnu" path="res://Model/info_panel.gd" id="14_xnmgy"]
[ext_resource type="Texture2D" uid="uid://bht3upoq3wupi" path="res://assets/settings_button/settings_button.png" id="15_2wmmq"]
[ext_resource type="Texture2D" uid="uid://dw0t12hdegd8p" path="res://assets/settings_button/settings_button_click.png" id="15_6wuao"]
[ext_resource type="Texture2D" uid="uid://bkv07dsi526kl" path="res://assets/stats_button/stats_button_hover.png" id="15_o4crf"]
[ext_resource type="Texture2D" uid="uid://cgjdx1h8uj4mu" path="res://assets/settings_button/settings_button_hover.png" id="16_6wuao"]
[ext_resource type="Texture2D" uid="uid://c0lj3fxjn31bl" path="res://assets/shop_button/shop_button.png" id="18_nlktb"]
[ext_resource type="Texture2D" uid="uid://hvimxf5eltc3" path="res://assets/shop_button/shop_button_click.png" id="19_vpgw3"]
[ext_resource type="Texture2D" uid="uid://b07uv5qepy2li" path="res://assets/shop_button/shop_button_hover.png" id="20_xp7qj"]
[ext_resource type="Texture2D" uid="uid://cxwf1b48xtn2o" path="res://assets/particles/snow_particle.png" id="25_3v7fu"]
[ext_resource type="Texture2D" uid="uid://cvotmb1sxlf0h" path="res://assets/particles/big_snow_particle.png" id="26_bljva"]
[ext_resource type="Texture2D" uid="uid://dcrgxsquua5l7" path="res://assets/background.png" id="27_bljva"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_pil5s")
script = ExtResource("2_ugs5p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BorderContainer" type="Control" parent="CanvasLayer"]
z_index = -4000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBorder" type="TextureRect" parent="CanvasLayer/BorderContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("27_bljva")

[node name="Inventaire" type="Control" parent="CanvasLayer/BorderContainer"]
layout_mode = 1
anchor_left = 0.04654167
anchor_top = 0.587963
anchor_right = 0.04654167
anchor_bottom = 0.587963
offset_left = -63.36
offset_top = -276.0
offset_right = 64.64
offset_bottom = 276.0
grow_vertical = 2
script = ExtResource("13_ew7f8")

[node name="ScrollInventaire" type="ScrollContainer" parent="CanvasLayer/BorderContainer/Inventaire"]
layout_mode = 0
offset_left = 30.0
offset_top = -128.0
offset_right = 158.0
offset_bottom = 500.0

[node name="MarginInventaire" type="MarginContainer" parent="CanvasLayer/BorderContainer/Inventaire/ScrollInventaire"]
layout_mode = 2

[node name="GridInventaire" type="GridContainer" parent="CanvasLayer/BorderContainer/Inventaire/ScrollInventaire/MarginInventaire"]
layout_mode = 2
size_flags_vertical = 4

[node name="PasserTour" type="TextureButton" parent="CanvasLayer/BorderContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.91400003
anchor_top = 0.84200007
anchor_right = 0.91400003
anchor_bottom = 0.84200007
offset_left = -59.880127
offset_top = -60.360046
offset_right = 60.119873
offset_bottom = 59.639954
texture_normal = ExtResource("10_o4crf")
texture_pressed = ExtResource("11_n3rgs")
texture_hover = ExtResource("12_s65m4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="CanvasLayer/BorderContainer/PasserTour"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.586
anchor_right = 0.5
anchor_bottom = 0.586
offset_left = -155.0
offset_top = 45.399986
offset_right = 158.0
offset_bottom = 108.39997
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.71600944, 0.6322402, 0.12397011, 1)
bbcode_enabled = true
text = "[center][font_size=24]Passer le tour"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="PanelContainer" parent="CanvasLayer/BorderContainer"]
layout_mode = 0
offset_left = 1547.0
offset_top = 342.0
offset_right = 1655.0
offset_bottom = 441.0
script = ExtResource("14_xnmgy")

[node name="stats_button" type="TextureButton" parent="CanvasLayer/BorderContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9335209
anchor_top = 0.2288889
anchor_right = 0.9335209
anchor_bottom = 0.2288889
offset_left = -50.360107
offset_top = -50.200012
offset_right = 49.639893
offset_bottom = 49.799988
texture_normal = ExtResource("13_xp7qj")
texture_pressed = ExtResource("14_o4crf")
texture_hover = ExtResource("15_o4crf")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="ChartStats" parent="CanvasLayer/BorderContainer" instance=ExtResource("14_o7jfm")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.82800007
anchor_top = 0.33100003
anchor_right = 0.82800007
anchor_bottom = 0.33100003
offset_left = -1589.7601
offset_top = -357.48004
offset_right = -1589.7601
offset_bottom = -357.48004

[node name="shop_button" type="TextureButton" parent="CanvasLayer/BorderContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051958337
anchor_top = 0.9133334
anchor_right = 0.051958337
anchor_bottom = 0.9133334
offset_left = -49.76001
offset_top = -50.400085
offset_right = 50.23999
offset_bottom = 49.599915
grow_vertical = 0
texture_normal = ExtResource("18_nlktb")
texture_pressed = ExtResource("19_vpgw3")
texture_hover = ExtResource("20_xp7qj")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_jtq4o")
metadata/_edit_use_anchors_ = true

[node name="background" type="Panel" parent="CanvasLayer/BorderContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.15
offset_left = 15.0
offset_top = 16.0
offset_right = -15.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="saison" type="RichTextLabel" parent="CanvasLayer/BorderContainer/background"]
layout_mode = 0
offset_left = 74.0
offset_top = 12.0
offset_right = 335.0
offset_bottom = 113.6
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=24
]Printemps austral"

[node name="mois" type="RichTextLabel" parent="CanvasLayer/BorderContainer/background"]
layout_mode = 0
offset_left = 69.0
offset_top = 54.0
offset_right = 331.0
offset_bottom = 123.600006
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=24]Mois 0"

[node name="argent" type="RichTextLabel" parent="CanvasLayer/BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.97
anchor_top = 0.2
anchor_right = 0.97
anchor_bottom = 0.2
offset_left = -338.40002
offset_top = 13.600002
offset_right = -54.400024
offset_bottom = 66.600006
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[right][font_size=32]1 000 000 €"
scroll_active = false

[node name="temperature" type="RichTextLabel" parent="CanvasLayer/BorderContainer/background"]
layout_mode = 0
offset_left = 117.0
offset_top = 99.0
offset_right = 288.3
offset_bottom = 158.6
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=24]24 C°"

[node name="state_bar" type="HBoxContainer" parent="CanvasLayer/BorderContainer/background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -667.5
offset_right = 667.5
offset_bottom = 133.0
grow_horizontal = 2
alignment = 1

[node name="HealthBarEmpty" type="Sprite2D" parent="CanvasLayer/BorderContainer/background/state_bar"]
position = Vector2(321.1875, 81.625)
scale = Vector2(2.875, 2.875)
texture = ExtResource("6_nmx3l")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarHealth" type="Sprite2D" parent="CanvasLayer/BorderContainer/background/state_bar/HealthBarEmpty"]
position = Vector2(-29.231003, -27.259998)
texture = ExtResource("7_s7bk8")
centered = false
region_enabled = true
region_rect = Rect2(33.999, 45.353, 83.872, 54.51)
script = ExtResource("8_fj0si")

[node name="Health_text" type="RichTextLabel" parent="CanvasLayer/BorderContainer/background/state_bar/HealthBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.027275
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=8]Santé"
metadata/_edit_use_anchors_ = true

[node name="EfficiencyBarEmpty" type="Sprite2D" parent="CanvasLayer/BorderContainer/background/state_bar"]
position = Vector2(661.1875, 81.625)
scale = Vector2(2.875, 2.875)
texture = ExtResource("9_1cvsb")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarEfficiency" type="Sprite2D" parent="CanvasLayer/BorderContainer/background/state_bar/EfficiencyBarEmpty"]
position = Vector2(-29.231, -27.26)
texture = ExtResource("7_s7bk8")
centered = false
region_enabled = true
region_rect = Rect2(33.9985, 45.353, 83.8725, 54.51)
script = ExtResource("8_fj0si")

[node name="Efficiency_text" type="RichTextLabel" parent="CanvasLayer/BorderContainer/background/state_bar/EfficiencyBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.0272
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=8]Efficacité"
metadata/_edit_use_anchors_ = true

[node name="HappinessBarEmpty" type="Sprite2D" parent="CanvasLayer/BorderContainer/background/state_bar"]
position = Vector2(1001.1875, 81.625)
scale = Vector2(2.875, 2.875)
texture = ExtResource("10_0ig0g")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarHappiness" type="Sprite2D" parent="CanvasLayer/BorderContainer/background/state_bar/HappinessBarEmpty"]
position = Vector2(-29.231, -27.26)
texture = ExtResource("7_s7bk8")
centered = false
region_enabled = true
region_rect = Rect2(33.9985, 45.353, 83.8725, 54.51)
script = ExtResource("8_fj0si")

[node name="Happiness_text" type="RichTextLabel" parent="CanvasLayer/BorderContainer/background/state_bar/HappinessBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.0272
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=8]Bonheur"
metadata/_edit_use_anchors_ = true

[node name="settings_button" type="TextureButton" parent="CanvasLayer/BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9692956
anchor_top = 0.04662464
anchor_right = 0.9692956
anchor_bottom = 0.04662464
offset_right = 50.0
offset_bottom = 50.0
texture_normal = ExtResource("15_2wmmq")
texture_pressed = ExtResource("15_6wuao")
texture_hover = ExtResource("16_6wuao")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_jtq4o")
metadata/_edit_use_anchors_ = true

[node name="SnowParticle" type="CPUParticles2D" parent="CanvasLayer"]
z_index = -4096
position = Vector2(-250, -2321)
amount = 500
texture = ExtResource("25_3v7fu")
lifetime = 5.0
preprocess = 5.0
speed_scale = 0.5
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(400, 980)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
tangential_accel_min = -900.0
tangential_accel_max = 900.0
scale_amount_min = 1.2
scale_amount_max = 1.6

[node name="SnowParticle2" type="CPUParticles2D" parent="CanvasLayer"]
z_index = -4096
position = Vector2(-250, -2321)
amount = 500
texture = ExtResource("26_bljva")
lifetime = 5.0
preprocess = 5.0
speed_scale = 0.5
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(400, 980)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
tangential_accel_min = -900.0
tangential_accel_max = 900.0
scale_amount_min = 1.2
scale_amount_max = 1.6

[connection signal="pressed" from="CanvasLayer/BorderContainer/PasserTour" to="." method="_on_passer_tour_pressed"]
[connection signal="pressed" from="CanvasLayer/BorderContainer/stats_button" to="." method="_on_btn_graphique_stats_pressed"]
[connection signal="pressed" from="CanvasLayer/BorderContainer/shop_button" to="CanvasLayer/BorderContainer/shop_button" method="_on_pressed_shop"]
[connection signal="pressed" from="CanvasLayer/BorderContainer/background/settings_button" to="CanvasLayer/BorderContainer/background/settings_button" method="_on_pressed_pause"]
